--- a/orderio/templates/manager-base.html
+++ b/orderio/templates/manager-base.html
@@ -22,12 +22,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
-  
     <!-- Custom styles for this template-->
     <link href="{% static 'css/main-template.css' %}" rel="stylesheet">
     <!-- icons -->
     <link href="{% static 'plugins/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <!-- datatables -->
+    <link href='{% static "plugins/datatables/dataTables.bootstrap4.min.css" %}' rel="stylesheet">
     
 </head>
 
@@ -416,7 +417,10 @@
 
     <!-- Custom scripts for all pages-->
     <script src="{% static 'js/main-template.min.js' %}"></script>
-
+    <!-- datatables -->
+    <script src="{% static 'plugins/datatables/jquery.dataTables.min.js' %}"></script>
+    <script src="{% static 'plugins/datatables/dataTables.bootstrap4.min.js' %}"></script>
+    <script src="{% static 'js/datatables.js' %}"></script>
 
 </body>
 
