user dashboard frontend

--- a/orderio/templates/account/user_list.html
+++ b/orderio/templates/account/user_list.html
@@ -53,7 +53,9 @@
                         <td>-</td>
                         {% endif %}
                         <td>{{user.employee.order_set.all.count}}</td>
-                        <td><a href="{% url 'delete_user' user.id %}">Delete</a> </td>
+                        <td><button data-url="{% url 'delete_user' user.id %}" value="{% url 'delete_user' user.id %}" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                        class="btn btn-sm btn-danger" id="del-btn{{user.pk}}">Delete</button> </td></td>
+        
                     </tr>
                     {% endfor %}
 
@@ -67,5 +69,24 @@
     </div>
 
 </div>
-
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">You are about to delete an user!</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Are you sure you want to <b class="text-danger">delete</b> this user?<br>
+          <i>This cannot be undone!</i>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" id="conf-btn">Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="{% static 'js/danger-confirmation.js' %}"></script>
+  
 {% endblock content %}
