--- a/orderio/templates/manager-base.html
+++ b/orderio/templates/manager-base.html
@@ -117,7 +117,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="{% url 'order:full_order_history' %}">
                   <i class="fas fa-calendar-alt"></i>
                     <span>All time</span></a>
             </li>
