--- a/orderio/templates/manager/reports_index.html
+++ b/orderio/templates/manager/reports_index.html
@@ -1,4 +1,4 @@
-{% extends "../base.html" %}
+{% extends "../manager-base.html" %}
 {% block content %}
 <a href="{% url 'manager:total_orders_by_department' %}">total orders by department</a><br>
 <a href="{% url 'manager:user_spendings' %}">User spendings</a><br>
