--- a/orderio/templates/employee/view_menu.html
+++ b/orderio/templates/employee/view_menu.html
@@ -1,3 +1,7 @@
+{% extends "../manager-base.html" %}
+{% block title %}
+  
+{% endblock title %}
 {{menu.created_for}}
 {{menu.created_at}}
 {{menu.avability}}
