--- a/orderio/templates/employee/public_profile.html
+++ b/orderio/templates/employee/public_profile.html
@@ -1,7 +1,7 @@
 {% extends "../manager-base.html" %}
 {% load static %}
 {% block title %}
-  {{employee.user.usernaem}}
+  {{employee.user.username}}
 {% endblock title %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/public_profile.css' %}">
