--- a/orderio/templates/user-base.html
+++ b/orderio/templates/user-base.html
@@ -283,7 +283,7 @@
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="{% url 'employee:employee_profile' %}">
+                                <a class="dropdown-item" href="{% url 'employee:my_profile' %}">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Profile
                                 </a>
