--- a/orderio/templates/user-base.html
+++ b/orderio/templates/user-base.html
@@ -57,7 +57,7 @@
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'employee:index' %}">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-house-user"></i>
                     <span>Home</span></a>
             </li>
 
