--- a/orderio/templates/manager/user_spendings.html
+++ b/orderio/templates/manager/user_spendings.html
@@ -1,4 +1,4 @@
-{% extends "../base.html" %}
+{% extends "../manager-base.html" %}
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.min.css" integrity="sha512-yVvxUQV0QESBt1SyZbNJMAwyKvFTLMyXSyBHDO4BG5t7k/Lw34tyqlSDlKIrIENIzCl+RVUNjmCPG+V/GMesRw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -6,18 +6,16 @@ Select user to show amount spent each week.
 <select id="user-select" class="chosen">
   <option default>Select user</option>
     {% for user in users %}
-      <option value="{{user.id}}" data-url="{% url 'manager:population_chart' user.id %}">
-        {{user}} | {{user.employee.first_name}} {{user.employee.last_name}}
+      <option value="{{user.id}}" data-url="{% url 'manager:chart_user_spendings' user.id %}">
+        {{user}} | {{user.first_name}} {{user.last_name}}
       </option>
     {% endfor %}
 </select>
 <div id="container" style="width: 75%;">
-    <canvas id="population-chart" data-url="{% url 'manager:population_chart' 2 %}"></canvas>
+    <canvas id="population-chart" data-url="{% url 'manager:chart_user_spendings' 2 %}"></canvas>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.min.js" integrity="sha512-rMGGF4wg1R73ehtnxXBt5mbUfN9JUJwbk21KMlnLZDJh7BkPmeovBuddZCENJddHYYMkCh9hPFnPmS9sspki8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js" integrity="sha256-hlKLmzaRlE8SCJC1Kw8zoUbU8BxA+8kR3gseuKfMjxA=" crossorigin="anonymous"></script>
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.min.js" integrity="sha512-rMGGF4wg1R73ehtnxXBt5mbUfN9JUJwbk21KMlnLZDJh7BkPmeovBuddZCENJddHYYMkCh9hPFnPmS9sspki8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <script src='{% static "js/user_spendings.js" %}'></script> 
   <script type="text/javascript">
