refactoring + small front end adjustments

--- a/orderio/templates/account/login.html
+++ b/orderio/templates/account/login.html
@@ -12,9 +12,7 @@
         <meta name="author" content="">
         <link rel="shortcut icon" type="image/jpg" href="{% static 'img/logo.png' %}"/>
         <title>
-          {% block title %}
-            
-          {% endblock title %} | ORDER.IO
+          Log In | ORDER.IO
           </title>
     
         <!-- Custom fonts for this template-->
