--- a/orderio/templates/main/index.html
+++ b/orderio/templates/main/index.html
@@ -2,7 +2,7 @@
 {% extends "../base.html" %}
 {% load static %}
 {% block title %}
-    Home 
+    Welcome
 {% endblock title %}
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/landing-page.css' %}">
