--- a/orderio/templates/meal/update_meal.html
+++ b/orderio/templates/meal/update_meal.html
@@ -1,4 +1,7 @@
 {% extends "../manager-base.html" %}
+{% block title %}
+Update Meal
+{% endblock title %}
 {% block content %}
 <div class="container-fluid" >
     <a href="{% url 'meal:all_meals' %}">Back</a>
