--- a/orderio/templates/menu/all_weekly_menus.html
+++ b/orderio/templates/menu/all_weekly_menus.html
@@ -1,7 +1,7 @@
 {% extends "../manager-base.html" %}
 {% load static %}
 {% block title %}
-  Meal List
+Weekly Menu History
 {% endblock title %}
 {% block content %}
 
