--- a/orderio/templates/menu/create_menu.html
+++ b/orderio/templates/menu/create_menu.html
@@ -1,5 +1,8 @@
 {% extends "../manager-base.html" %}
 {% load static %}
+{% block title %}
+New Menu
+{% endblock title %}
 {% block content %}
 
 <div class="container-fluid" >
