--- a/orderio/templates/menu/view_menu.html
+++ b/orderio/templates/menu/view_menu.html
@@ -1,6 +1,6 @@
 {% extends "../manager-base.html" %}
 {% block title %}
-Order {{order.pk}}
+{{menu}}
 {% endblock title %}
 {% block content %}
 <body class="bg-gradient-primary">
