--- a/orderio/templates/order/all_orders_this_week.html
+++ b/orderio/templates/order/all_orders_this_week.html
@@ -1,4 +1,7 @@
 {% extends "../manager-base.html" %}
+{% block title %}
+  Weekly Orders
+{% endblock title %}
 {% block content %}
 <div class="container-fluid">
     
