--- a/orderio/templates/order/full_order_history.html
+++ b/orderio/templates/order/full_order_history.html
@@ -1,4 +1,7 @@
 {% extends "../manager-base.html" %}
+{% block title %}
+  All Orders
+{% endblock title %}
 {% block content %}
 <div class="container-fluid">
     
