--- a/orderio/templates/account/create_user.html
+++ b/orderio/templates/account/create_user.html
@@ -1,4 +1,7 @@
 {% extends "../manager-base.html" %}
+{% block title %}
+  User Creation
+{% endblock title %}
 {% block content %}
 <body class="bg-gradient-primary">
 
