--- a/orderio/templates/account/user_list.html
+++ b/orderio/templates/account/user_list.html
@@ -1,5 +1,8 @@
 {% extends "../manager-base.html" %}
 {% load static %}
+{% block title %}
+  User List
+{% endblock title %}
 {% block content %}
 
 
