--- a/orderio/templates/employee/daily_menu.html
+++ b/orderio/templates/employee/daily_menu.html
@@ -1,6 +1,9 @@
 
   {% extends "../user-base.html" %}
   {% load static %}
+  {% block title %}
+    Daily Menu
+  {% endblock title %}
   {% block content %}
   <div class="container-fluid">
    
