--- a/orderio/templates/employee/employee_profile.html
+++ b/orderio/templates/employee/employee_profile.html
@@ -1,5 +1,8 @@
 {% extends "../user-base.html" %}
 {% load static %}
+{% block title %}
+Profile
+{% endblock title %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/public_profile.css' %}">
 <div class="container rounded bg-white mt-5 mb-5 shadow">
