--- a/orderio/templates/employee/index.html
+++ b/orderio/templates/employee/index.html
@@ -1,5 +1,8 @@
 {% extends "../user-base.html" %}
 {% load static %}
+{% block title %}
+  Home
+{% endblock title %}
 {% block content %}
 {% for message in messages %}
 <div class="alert alert-{{message.level_tag}}  alert-dismissible fade show">
