--- a/orderio/templates/manager/index.html
+++ b/orderio/templates/manager/index.html
@@ -1,7 +1,7 @@
 {% extends "../manager-base.html" %}
 {% load static %}
 {% block title %}
-  Manager Dashboard
+Dashboard
 {% endblock title %}
 {% block content %}
 {% for message in messages %}
