--- a/orderio/templates/meal/all_categories.html
+++ b/orderio/templates/meal/all_categories.html
@@ -1,7 +1,7 @@
 {% extends "../manager-base.html" %}
 {% load static %}
 {% block title %}
-  Meal List
+Category List
 {% endblock title %}
 {% block content %}
 
