--- a/orderio/templates/meal/create_category.html
+++ b/orderio/templates/meal/create_category.html
@@ -1,4 +1,7 @@
 {% extends "../manager-base.html" %}
+{% block title %}
+New Category
+{% endblock title %}
 {% block content %}
 <div class="container-fluid" >
     {% for message in messages %}
