--- a/orderio/templates/menu/update_menu.html
+++ b/orderio/templates/menu/update_menu.html
@@ -1,5 +1,8 @@
 {% extends "../manager-base.html" %}
 {% load static %}
+{% block title %}
+{{menu.get_day_name}} Menu Edit
+{% endblock title %}
 {% block content %}
 
 <div class="container-fluid">
@@ -8,7 +11,7 @@
   <div class="row " >
     <div class="col-lg-8 col-md-8  card shadow mb-4">
       <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">Meal List</h6>
+        <h6 class="m-0 font-weight-bold text-primary">You are editing menu for {{menu.get_day_name}}</h6>
       </div>
       <div class="table-responsive" >
 
