--- a/orderio/templates/menu/weekly_menu.html
+++ b/orderio/templates/menu/weekly_menu.html
@@ -1,7 +1,7 @@
 {% extends "../manager-base.html" %}
 {% load static %}
 {% block title %}
-  Weekly Menu
+This week's menu
 {% endblock title %}
 {% block content %}
 {% for message in messages %}
