--- a/orderio/templates/order/daily_orders.html
+++ b/orderio/templates/order/daily_orders.html
@@ -1,5 +1,8 @@
 {% extends "../manager-base.html" %}
 {% load static %}
+{% block title %}
+  Daily Orders
+{% endblock title %}
 {% block content %}
 {% for message in messages %}
 <div class="alert alert-{{message.level_tag}}  alert-dismissible fade show">
